# gcp-financial-crime-ml-intelligence-platform

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: feature_config.yaml  governance_controls.yaml  model_config.yaml  monitoring_config.yaml  pipeline_config.yaml  risk_scoring.yaml
diagrams/: architecture.mmd  deployment_phases.mmd  distributed_dataflow.mmd  gcp_reference_architecture.mmd  governance_workflow.mmd  ml_lifecycle.mmd
docs/: agentic_ai_controls.md  aml_risk_scoring.md  anomaly_detection.md  architecture.md  architecture_narrative.md  data_dictionary.md  data_validation.md  deployment_blueprint.md  distributed_systems_design.md  end_to_end_walkthrough.md  feature_engineering.md  financial_crime_typologies.md  gcp_reference_architecture.md  gcp_service_mapping.md  governance_evidence_pack.md  index.md  limitations.md  model_risk_management.md  modelling.md  monitoring_strategy.md  network_risk_modelling.md  nlp_alert_triage.md  operations_runbook.md  portfolio_positioning.md  repository_quality_checklist.md  sample_outputs_guide.md  security_and_governance_mapping.md
scripts/: build_features.py  final_project_check.py  generate_demo_data.py  generate_governance_pack.py  run_all_local.sh  run_anomaly_detection.py  run_monitoring.py  run_network_risk.py  run_nlp_triage.py  train_fraud_model.py  validate_demo_data.py  validate_docs.py
tests/: test_anomaly_detection.py  test_data_generation.py  test_feature_engineering.py  test_final_project_readiness.py  test_gcp_architecture_docs.py  test_governance.py  test_model_scoring.py  (+5 more)
(+96 files in other folders)
