[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcp-financial-crime-ml-intelligence-platform"
version = "0.1.0"
description = "Local-first, GCP-aligned financial crime ML intelligence platform scaffold."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Portfolio Project" }
]
dependencies = [
  "Jinja2",
  "PyYAML",
  "matplotlib",
  "networkx",
  "numpy",
  "pandas",
  "pydantic",
  "scikit-learn"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff"
]

[project.scripts]
financial-crime-ml = "financial_crime_ml.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

